@@ -183,12 +183,14 @@ process.selectionSequence = cms.Sequence(
     #isMC        = cms.untracked.bool(False),
     #)
 
-process.load("ElectroWeakAnalysis.MultiBosons.FsrAnalysis.energyScaleTree_cfi")
+process.load("ElectroWeakAnalysis.MultiBosons.FsrAnalysis.PmvTreeMaker_cfi")
+
+process.pmvTree.isMC = options.isMC
 
 ## Pileup
 if options.isMC:
-    process.tree.pileupInfoSrc = cms.untracked.InputTag("addPileupInfo")
-    process.tree.lumiReWeighting = cms.untracked.PSet(
+    process.pmvTree.pileupInfoSrc = cms.untracked.InputTag("addPileupInfo")
+    process.pmvTree.lumiReWeighting = cms.untracked.PSet(
         mcDistribution   = cms.vdouble(
             ## from the gamma+jet sample (no filter)
             ## 21 numbers
@@ -204,38 +206,12 @@ if options.isMC:
             4.74552e+07, 4.01812e+07, 3.08212e+07, 2.17147e+07, 1.42032e+07, 8.69835e+06,
             5.02211e+06, 2.74918e+06, 1.43373e+06, 715277., 342608., 158070.,
             70454.9, 30421.1, 12757.2
-            ## from estimatePileupD.py for golden JSON up to run 165542
-  #           4.49103e+06, 7.50711e+06, 1.7013e+07, 2.77526e+07, 3.56721e+07, 3.82648e+07,
-  #           3.55386e+07, 2.93206e+07, 2.18974e+07, 1.50169e+07, 9.56312e+06, 5.70622e+06,
-  #           3.21393e+06, 1.71936e+06, 878374, 430566, 203380, 92934.5,
-  #           41228.6, 17815.2, 7520.35,# 3109.37, 1262.01, 503.739,
-            #198.015, 76.7276, 29.3217, 11.0527, 4.10876, 1.50569,
-            #0.543606, 0.193229, 0.0675766, 0.0232364, 0.00785103, 0.0026052,
-            #0.000848637, 0.000271282, 8.50798e-05, 2.61736e-05, 7.8975e-06, 2.33716e-06,
-            #6.78371e-07, 1.93133e-07, 5.39384e-08, 1.47793e-08, 3.97367e-09, 1.04856e-09,
-            #2.71605e-10, 6.92423e-08, 0,
-
-
-            ## from estimatePileupD.py for golden JSON up to run 163869
-            #3.6124e+06, 5.7606e+06, 1.3047e+07, 2.12065e+07, 2.71345e+07, 2.89995e+07,
-            #2.68765e+07, 2.21641e+07, 1.65695e+07, 1.13875e+07, 7.27332e+06, 4.35533e+06,
-            #2.46294e+06, 1.32354e+06, 679618, 335115, 159402, 73447,
-            #32906.5, 14384.3, 6152.9, #2581.8, 1064.77, 432.206,
-            #172.826, 68.1079, 26.4529, 10.1234, 3.81552, 1.4155,
-            #0.51655, 0.185307, 0.0653117, 0.0226036, 0.00767821, 0.00255903,
-            #0.000836568, 0.000268193, 8.43057e-05, 2.59835e-05, 7.85175e-06, 2.32636e-06,
-            #6.75872e-07, 1.92565e-07, 5.3812e-08, 1.47516e-08, 3.96773e-09, 1.0473e-09,
-            #2.71346e-10, 5.26651e-08, 0.
         )
-        #mcFile = cms.FileInPath('pudist_G_Pt-15to3000_TuneZ2_Flat_7TeV_pythia6_Summer11.root'),
-        #mcHist = cms.string('pudist'),
-        #dataFile = cms.FileInPath('pudist_160404-163869_Cert_JSON.root'),
-        #dataHist = cms.string('pileup'),
     )
 
 process.p = cms.Path(
     process.selectionSequence *
-    process.tree
+    process.pmvTree
 )
 
 process.options.wantSummary = True
